# TelegramBot

./: .env.example  .gitignore  admin.py  bot.py  config.py  database.py  i18n.py  keyboards.py  payment_verifier.py  pyproject.toml  reorganize_services.py  requirements.txt  ruff.toml  vercel.json
.github/workflows/: ci.yml
api/: dashboard.py  webhook.py
app/: __init__.py  constants.py
app/domain/: affiliate_service.py  inventory_service.py  loyalty_service.py  order_service.py  payment_service.py  support_service.py  wallet_service.py
app/web/: __init__.py  dashboard_api.py
tests/: conftest.py  test_affiliate_service.py  test_bot_design.py  test_catalog_performance.py  test_dashboard_api.py  test_dashboard_stats.py  test_i18n.py  test_inventory_service.py  test_keyboards.py  test_loyalty_service.py  test_offer_detail.py  test_order_service.py  test_payment_service.py  test_payment_verifier.py  test_settings.py  test_startup.py  test_support_service.py  test_wallet_service.py  test_webhook_http.py
