[project]
name = "telegrambot"
version = "1.1.0"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot==21.6",
    "python-dotenv==1.0.1",
    "pymongo==4.10.1",
    "cryptography==43.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mongomock>=4.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
extend = "ruff.toml"
