[project]
name = "telegrambot"
version = "1.1.0"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot==22.8",
    "python-dotenv==1.2.2",
    "pymongo==4.10.1",
    "cryptography==48.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mongomock>=4.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
extend = "ruff.toml"

[tool.vercel]
entrypoint = "api.webhook:handler"
